--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/scss/bootstrap';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
-@import "./custom/style";
-@import "./custom/variables";
+@import './custom/style';
+@import './custom/variables';
