--- a/src/components/molecules/avatar/style.scss
+++ b/src/components/molecules/avatar/style.scss
@@ -4,7 +4,9 @@
 
 .profile-pic {
     width: 120px;
-    height: auto;
+    height: 120px;
+    margin: 0;
+    padding: 0;
     border-radius: 100%;
 }
 
