alteracao na foto do personal e correcao de detalhes

--- a/src/components/atoms/textoDepoimento/style.scss
+++ b/src/components/atoms/textoDepoimento/style.scss
@@ -3,12 +3,12 @@
     border: solid 1px #212121;
     background-color: #212121;
     border-radius: 10px;
-    color: #fff
+    color: #fff;
 }
 
 .post-txt {
     font-size: 1.1em;
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 .arrow-down {
@@ -17,5 +17,5 @@
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
     border-top: 20px solid #212121;
-    margin-left: 85px
+    margin-left: 85px;
 }
