--- a/src/components/molecules/avatar/style.scss
+++ b/src/components/molecules/avatar/style.scss
@@ -1,15 +1,11 @@
 .fit-image {
-    object-fit: cover
+    object-fit: cover;
 }
-
 .profile-pic {
-    width: 120px;
-    height: 120px;
     margin: 0;
     padding: 0;
     border-radius: 100%;
 }
-
 .profile {
     margin: 0;
     font-weight: 500;
