Componentização de botões

--- a/src/styles/custom/style.scss
+++ b/src/styles/custom/style.scss
@@ -4,27 +4,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 body {
     background-color: #131313;
-    color: #D3D3D3;
+    color: #d3d3d3;
 }
 .footer {
-    background-color: #000;
+    background-color: $black;
 }
 a.link {
     text-decoration: none;
     color: inherit;
 }
 a.link:hover {
-    color: #FFC401;
+    color: $yellow;
 }
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-transform: uppercase;
     text-align: center;
 }
 h1 {
-    color: #FFF;
     font-size: 3em;
     font-family: 'Racing Sans One', cursive;
     font-weight: 400;
@@ -35,9 +36,10 @@ h1 {
 h3 {
     font-size: 1em;
 }
-h2, h3 {
-    color: #FFC401;
-    font-family: "Helvetica", Sans-serif;
+h2,
+h3 {
+    color: $yellow;
+    font-family: 'Helvetica', Sans-serif;
     font-weight: 500;
     font-style: oblique;
     letter-spacing: 0.3px;
@@ -45,32 +47,14 @@ h2, h3 {
 }
 .hr {
     opacity: 1 !important;
-    color: #FFC401;
+    color: $yellow;
     height: 30px !important;
 }
-.btn-buy {
-    font-family: "Racing Sans One", Sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    text-transform: capitalize;
-    fill: #0f0f0f;
-    color: #0f0f0f;
-    background-color: #ffc401;
-    border-radius: 0px 0px 0px 0px;
-    box-shadow: 0px 0px 21px -9px #faaa00;
-}
-.btn-buy:hover {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-    transform: scale(1);
-    animation: pulse 1s infinite;
-    fill: #0F0F0F;
-    color: #0F0F0F;
-    background-color: #FFC401;
-}
+
 p {
     text-align: justify;
-    margin-bottom: .9rem;
-    color: #D3D3D3;
+    margin-bottom: 0.9rem;
+    color: $gray-100;
     font-weight: 300;
     line-height: 1.8em;
     letter-spacing: 0.02rem;
@@ -79,36 +63,19 @@ p.apresentacao {
     margin-top: 1em;
     font-weight: 400;
     letter-spacing: 0.05em;
-    color: #FFF;
+    color: $white;
     font-style: italic;
 }
 
 .react-multiple-carousel__arrow--left::before {
-    content: "<" !important;
+    content: '<' !important;
     font-weight: 900;
 }
 .react-multiple-carousel__arrow--right::before {
-    content:">" !important;
+    content: '>' !important;
     font-weight: 900;
 }
 
 .ratio-9x16 {
     --bs-aspect-ratio: calc(16 / 9 * 100%);
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(0.95);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-    }
-
-    70% {
-        transform: scale(1.3);
-        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-    }
-
-    100% {
-        transform: scale(0.95);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    }
 }
