Alterações de cor

--- a/src/components/atoms/button/styles.scss
+++ b/src/components/atoms/button/styles.scss
@@ -1,23 +1,21 @@
 @import '../../../styles/custom/variables.scss';
 
 .btn-buy {
-    font-family: 'Racing Sans One', Sans-serif;
+    font-family: 'Saira', sans-serif;
     font-size: 18px;
-    font-weight: 400;
-    text-transform: capitalize;
-    fill: #0f0f0f;
-    color: #0f0f0f;
-    background-color: $yellow;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: $light;
+    background-color: $primary;
     border-radius: 0px 0px 0px 0px;
-    box-shadow: 0px 0px 21px -9px #faaa00;
+    box-shadow: 0px 0px 21px -9px $primary;
 }
 .btn-buy:hover {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    box-shadow: 0 0 0 0 $primary;
     transform: scale(1);
+    color: $light;
     animation: pulse 1s infinite;
-    fill: #0f0f0f;
-    color: #0f0f0f;
-    background-color: #ffc401;
+    background-color: #cf3c22;
 }
 
 @keyframes pulse {
