Ajustes de cores no slider

--- a/src/components/organisms/photoSlider/style.scss
+++ b/src/components/organisms/photoSlider/style.scss
@@ -2,6 +2,6 @@
 
 .react-multiple-carousel__arrow {
     border-width: 5px;
-    border-color: $yellow;
+    border-color: $primary;
     border-style: inset;
 }
