correção titulo cards treino

--- a/src/components/molecules/cardAcessos/style.scss
+++ b/src/components/molecules/cardAcessos/style.scss
@@ -3,7 +3,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+    min-height: 250px;
 }
 .card-acesso-texto {
     background-color: rgba(0,0,0,0.8);
+}
+.card-acesso-texto p{
+    font-weight: 400;
 }
