--- a/src/components/organisms/menu/style.scss
+++ b/src/components/organisms/menu/style.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/global.scss';
+
 .menu-position {
     z-index: 1;
 }
@@ -5,4 +7,10 @@
 .menu-position > * {
     text-transform: uppercase;
     font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+    .nav-right {
+        justify-content: flex-end;
+    }
 }
