--- a/src/components/organisms/menu/style.scss
+++ b/src/components/organisms/menu/style.scss
@@ -11,6 +11,6 @@
 
 @media only screen and (min-width: 768px) {
     .nav-right {
-        justify-content: flex-end;
+        justify-content: center;
     }
 }
