inserção do material enviado pelo cliente

--- a/src/components/organisms/photoSlider/style.scss
+++ b/src/components/organisms/photoSlider/style.scss
@@ -5,3 +5,9 @@
     border-color: $primary;
     border-style: inset;
 }
+
+.insta-post {
+    border-radius: 8px;
+    background-color: $white;
+    object-fit: cover;
+}
