--- a/src/components/atoms/organisms/photoSlider/style.scss
+++ b/src/components/atoms/organisms/photoSlider/style.scss
@@ -1,8 +1,6 @@
-@import '../../../styles/custom/variables.scss';
-
 .react-multiple-carousel__arrow {
     border-width: 5px;
-    border-color: $primary;
+    border-color: #dc3545;
     border-style: inset;
 }
 
