--- a/src/styles/custom/variables.scss
+++ b/src/styles/custom/variables.scss
@@ -36,7 +36,7 @@ $pink: #d63384 !default;
 $red: #dc3545 !default;
 $orange: #e6452a !default;
 $yellow: #ffc107 !default;
-$green: #198754 !default;
+$green: #25D366 !default;
 $teal: #20c997 !default;
 $cyan: #0dcaf0 !default;
 
