--- a/src/styles/custom/style.scss
+++ b/src/styles/custom/style.scss
@@ -8,6 +8,7 @@
 body {
     background-color: #131313;
     color: $light;
+    font-family: $font-family;
 }
 .footer {
     background-color: $black;
@@ -104,16 +105,20 @@ p.apresentacao {
     padding-top: 80px;
 }
 
-.text-red {
-    color: $red;
-}
+.text-red {color: $red;}
+
+.text-uppercase {text-transform: uppercase;}
+
+.bg-male {background-color: $male;}
+
+.bg-female {background-color: $female;}
+
+.bg-consult {background-color: $green;}
+
+.bg-black-fade {background-color: rgba(0,0,0,0.7);}
 
 .btn-buy {
-    font-family: 'Saira', sans-serif;
-    font-weight: 500;
-    text-transform: uppercase;
     color: $light;
-    border-radius: 0px 0px 0px 0px;
     box-shadow: 0px 0px 21px -9px $primary;
 }
 .btn-buy:hover {
@@ -126,11 +131,6 @@ p.apresentacao {
 .btn-buy-course {
     background-color: $primary;
     font-size: 18px;
-}
-
-.btn-buy-vip {
-    background-color: $green;
-    font-size: 1.8rem;
 }
 
 .btn-sticky {
@@ -151,14 +151,23 @@ p.apresentacao {
 
 .mh-full { max-height: 100vh; }
 
-.card-consultoria {
+.border-male {border-color: $male !important;}
+
+.border-female {border-color: $female !important;}
+
+.border-consult {border-color: $consult !important;}
+
+.border-3 {
+    border-style: 'solid';
+    border-width: 3px;
+}
+
+.card-planos {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-.card-consultoria-texto {
-    background-color: rgba(0,0,0,0.7);
-}
+
 .card-consultoria-list ul {
     list-style: none;
     margin: auto;
@@ -185,4 +194,29 @@ p.apresentacao {
 
 @media only screen and (min-width: 768px) {
     .nav-right { justify-content: center; }
+}
+
+.scroll-emphasis {
+    background:
+        radial-gradient(circle closest-side, currentColor 80%, transparent) bottom var(--p1, -8px) left 50% /100% var(--p, 12px) no-repeat,
+        linear-gradient(red 0 0) bottom 4px left 50%/var(--d, 0%) 3px no-repeat;
+    transition: 0.5s;
+}
+.scroll-emphasis:hover {
+    --d: 100%;
+    --p: 3px;
+    --p1: 4px;
+}
+
+.fw-500 {
+    font-weight: 500;
+}
+
+.color-primary {
+    color: $primary;
+}
+
+.nav-link:hover {
+    background-color: rgba(230, 69, 42, 0.7);
+    color: rgba(255,255,255,1) !important;
 }
