--- a/src/styles/custom/variables.scss
+++ b/src/styles/custom/variables.scss
@@ -29,7 +29,7 @@ $grays: (
     '900': $gray-900
 ) !default;
 
-$blue: #0d6efd !default;
+$blue: #01009A !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #d63384 !default;
@@ -65,6 +65,10 @@ $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-900 !default;
 
+$consult: $green;
+$male: $blue;
+$female: $pink;
+
 $theme-colors: (
     'primary': $primary,
     'secondary': $secondary,
@@ -75,3 +79,5 @@ $theme-colors: (
     'light': $light,
     'dark': $dark
 ) !default;
+
+$font-family: 'Saira', sans-serif;
