--- a/src/styles/custom/style.scss
+++ b/src/styles/custom/style.scss
@@ -220,3 +220,7 @@ p.apresentacao {
     background-color: rgba(230, 69, 42, 0.7);
     color: rgba(255,255,255,1) !important;
 }
+
+.place-content-center {
+    place-content: center;
+}
